# avr-absurd

./: LICENSE  README.md  guesswork.md  pyproject.toml
src/absurd/: __main__.py
src/absurd/debugger/: __init__.py  debugger.py
src/absurd/nvmdrivers/: __init__.py  nvmdrivers.py
src/absurd/rspserver/: __init__.py  breakpoint.py  rspserver.py
src/absurd/updi/: __init__.py  updiclient.py  updicompat.py  updirev3.py
